<resources>
    <string name="app_name">Meterzy</string>

    <!--Content Description-->
    <string name="content_description_image">Image</string>

    <!--Dummies-->
    <string name="dummy_item_name">Item Name</string>

    <!--Label-->
    <string name="lb_name">Name</string>
    <string name="lb_consumer_no">Consumer No</string>
    <string name="lb_account_no">Account No</string>
    <string name="lb_tariff">Tariff</string>
    <string name="lb_save">Save</string>
    <string name="lb_cancel">Cancel</string>
    <string name="lb_currency">Currency</string>
    <string name="lb_advance">Advance</string>
    <string name="lb_start_range">Start range</string>
    <string name="lb_end_range">End range</string>
    <string name="lb_charges">Charges</string>
    <string name="lb_fixed_price">Fixed charges</string>
    <string name="lb_percent_price">Percent charges</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
