<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wedgewood_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/alabaster"
        android:orientation="vertical"
        android:padding="@dimen/padding_s">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_name" />

        <EditText
            android:id="@+id/et_consumer_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_consumer_no" />

        <EditText
            android:id="@+id/et_account_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_account_no" />

        <EditText
            android:id="@+id/et_tariff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_tariff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/bg_button"
                android:text="@string/lb_save" />

            <Space
                android:layout_width="@dimen/spacing_s"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/bg_button"
                android:text="@string/lb_cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


