<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_s"
    android:layout_marginTop="@dimen/margin_s"
    android:elevation="@dimen/elev_s">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alabaster"
        android:orientation="vertical"
        android:padding="@dimen/padding_s">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/size_ic_m"
            android:layout_height="@dimen/size_ic_m"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin_s"
            android:background="@color/alabaster"
            android:src="@drawable/ic_close" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_name"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/et_start_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_start_range"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_end_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_end_range"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_charges"
            android:inputType="numberDecimal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_fixed_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/lb_fixed_price" />

            <RadioButton
                android:id="@+id/rb_percent_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/lb_percent_price" />
        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>