<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_1"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_s">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_name"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/et_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:hint="@string/lb_currency"
            android:inputType="textNoSuggestions" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tl_tariff"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabTextAppearance="@style/AppTabTextAppearance" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_tariff"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_s">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_button"
            android:text="@string/lb_save" />

        <Space
            android:layout_width="@dimen/spacing_s"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_button"
            android:text="@string/lb_cancel" />
    </LinearLayout>
</RelativeLayout>